CI on slurm: run on scctl managed clusters
Add support for slurm clusters managed by scctl

slurm_cmd.sh - provides abstraction to execute slurm based commands
run_slurm_tests_ucc.sh - basic test file
fix_enroot.sh - comes to mitigate enroot issue to handle errors with
anonymous image access`

Issue: HPCINFRA-3983

Signed-off-by: Michael Braverman <michaelbr@nvidia.com>

--- a/.ci/slurm_tests/job_matrix.yaml
+++ b/.ci/slurm_tests/job_matrix.yaml
@@ -18,6 +18,10 @@ env:
   SRC_DIR: "${NVIDIA_ROOT_DIR}/src"
   BIN_DIR: "${NVIDIA_ROOT_DIR}/bin"
   DOCKER_OPT: "--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all"
+  SLM_JOB_NAME: "ucc_tests_${BUILD_NUMBER}"
+  SLM_PARTITION: "funk"
+  SLM_NODES: "2"
+
 
 kubernetes:
   cloud: il-ipp-blossom-prod
@@ -27,13 +31,13 @@ kubernetes:
 
 credentials:
   - {
-      credentialsId: "bc9a18d3-1153-449c-b924-7fc9249c9cc0",
-      usernameVariable: "UCC_USERNAME",
-      passwordVariable: "UCC_PASSWORD",
+      credentialsId: "svcnbu-swx-hpcx-corporate-user-pass",
+      usernameVariable: "SERVICE_USER_USERNAME",
+      passwordVariable: "SERVICE_USER_PASSWORD",
     }
 
-# cloud pod to build the shared docker image
 runs_on_dockers:
+  # cloud pod to build the shared docker image
   - {
       file: ".ci/Dockerfile.ngc_pytorch",
       name: "ngc_pytorch",
@@ -43,90 +47,40 @@ runs_on_dockers:
       build_args: "--no-cache --build-arg CUDA_VER=${CUDA_VER}",
     }
   - {
-      file: ".ci/dockerfiles/Dockerfile.build_helper",
-      name: "build_helper",
-      tag: "latest",
-      arch: "x86_64",
-      uri: "$arch/$name",
-      build_args: "--no-cache",
+      name: 'slurm_executor',
+      url: 'nbu-harbor.gtm.nvidia.com/swx-lab-platform/scctl:latest',
+      arch: 'x86_64'
     }
 
-# bare metal
-runs_on_agents:
-  - nodeLabel: "swx-clx01"
-  - nodeLabel: "swx-clx02"
-  - nodeLabel: "ml-test-node-gpu"
-
-timeout_minutes: 360
+timeout_minutes: 60
 
 steps:
-  #============================================================================
-  - name: Init docker
-    agentSelector:
-      - "{nodeLabel: 'swx-clx01'}"
-      - "{nodeLabel: 'swx-clx02'}"
+  - name: Allocate Slurm resources
+    credentialsId: "svcnbu-swx-hpcx-corporate-user-pass"
+    containerSelector: "{name: 'slurm_executor'}"
     run: |
-      set -x
-      # make sure we always have base image for faster pull of CI image
-      docker pull "${UCC_DOCKER_IMAGE_NAME}:base"
-      # pull the CI image
-      docker pull "${UCC_DOCKER_IMAGE_NAME}:${BUILD_NUMBER}"
+      export SLURM_VIA="scctl"
+      export SLURM_CMD="salloc -N ${SLM_NODES} -p ${SLM_PARTITION} --job-name=${SLM_JOB_NAME} --immediate=120 --time=00:30:00 --no-shell"
+      ${WORKSPACE}/.ci/slurm_tests/slurm_cmd.sh init
+      ${WORKSPACE}/.ci/slurm_tests/slurm_cmd.sh exec
 
-  #============================================================================
-  - name: Run Coverity
-    credentialsId: "bc9a18d3-1153-449c-b924-7fc9249c9cc0"
-    agentSelector: "{nodeLabel: 'ml-test-node-gpu'}"
+  - name: Run UCC tests on slurm cluster
+    containerSelector: "{name: 'slurm_executor'}"
     run: |
-      export UCC_PASSWORD=$UCC_PASSWORD
-      export UCC_USERNAME=$UCC_USERNAME
-      echo "Running coverity"
-      ${WORKSPACE}/.ci/scripts/coverity.sh
-    archiveArtifacts: .ci/scripts/cov-build/*
-
-  #============================================================================
-  - name: Run UCC / Torch-UCC tests
-    agentSelector: "{nodeLabel: 'swx-clx02'}"
-    run: |
-      set -x
-      echo "INFO: Run UCC tests"
-      hostname
-      timeout -k 20 90m docker run -t --rm --name="ucc_tests_${BUILD_NUMBER}" $DOCKER_OPT "${UCC_DOCKER_IMAGE_NAME}:${BUILD_NUMBER}" bash -c "\${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh"
-    always: |
-      docker rm --force "ucc_tests_${BUILD_NUMBER}" || true
-
-  #============================================================================
-  - name: Run docker containers
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
-    run: |
-      echo "INFO: Run docker containers"
-      ${WORKSPACE}/.ci/scripts/run_docker.sh
-    onfail: |
-      ${WORKSPACE}/.ci/scripts/stop_docker.sh
-
-  #============================================================================
-  - name: Run UCC MPI tests
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
-    run: |
-      [ "$UCC_MPI_TESTS" = "false" ] && { echo "MPI tests were skipped !!!";exit 0; }
-      echo "INFO: Run UCC MPI tests"
-      ${WORKSPACE}/.ci/scripts/run_tests_ucc_mpi_docker.sh
-    onfail: |
-      ${WORKSPACE}/.ci/scripts/stop_docker.sh
-
-  #============================================================================
-  - name: Run DLRM tests (UCC/GPU)
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
-    run: |
-      echo "INFO: Run DLRM tests (UCC/GPU)"
-      ${WORKSPACE}/.ci/scripts/run_dlrm_docker.sh
-    always: |
-      ${WORKSPACE}/.ci/scripts/stop_docker.sh
+      set -xv
+      echo "INFO: Run UCC tests on Slurm cluster"
+      envsubst < ${WORKSPACE}/.ci/scripts/run_slurm_tests_ucc.sh > ${WORKSPACE}/slurm_test.sh
+      cat  ${WORKSPACE}/slurm_test.sh
+      export SLURM_VIA="scctl"
+      export SLURM_CMD="${WORKSPACE}/slurm_test.sh"
+      ${WORKSPACE}/.ci/slurm_tests/slurm_cmd.sh exec_file
 
 pipeline_stop:
-  containerSelector: "{name:'build_helper'}"
+  containerSelector: "{name:'slurm_executor'}"
+  credentialsId: "svcnbu-swx-hpcx-corporate-user-pass"
   run: |
-    set -x
-    export HOSTFILE=${WORKSPACE}/.ci/configs/swx-clx01/hostfile.txt
-    export BUILD_NUMBER=${BUILD_NUMBER}
-    export UCC_DOCKER_IMAGE_NAME=${UCC_DOCKER_IMAGE_NAME}
-    sudo -E -u swx-jenkins ${WORKSPACE}/.ci/scripts/clean_docker.sh
+    set -xv
+    export SLURM_VIA="scctl"
+    export SLURM_CMD="scancel --jobname=${SLM_JOB_NAME}"
+    ${WORKSPACE}/.ci/slurm_tests/slurm_cmd.sh init
+    ${WORKSPACE}/.ci/slurm_tests/slurm_cmd.sh exec
