--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -182,21 +182,29 @@
           githubHelper = GithubHelper.getInstance("${{GIT_PASSWORD}}", VARIABLE_FROM_POST)
         }}
 
-        def blueOceanUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_proj}-ci-dispatcher/detail/{jjb_proj}-ci-dispatcher/${{BUILD_NUMBER}}/pipeline/"
+        def blueOceanUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F{jjb_proj}-ci-dispatcher/detail/{jjb_proj}-ci-dispatcher/${{BUILD_NUMBER}}/pipeline/"
         githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING)
         currentBuild.description = githubHelper.getBuildDescription()
 
         try {{
-            parallel build: {{
-                build job: 'ucc', parameters: [
+            parallel UCC: {{
+                def run = build job: 'ucc', parameters: [
                     string(name: 'sha1', value: githubHelper.getMergedSHA()),
                     string(name: 'githubData', value: VARIABLE_FROM_POST)
-                ], wait: true
-            }}, hpcsdk: {{
-                build job: 'ucc-build-hpcsdk', parameters: [
+                ], wait: true, propagate: false
+                echo "See UCC Job status: ${{JENKINS_URL}}blue/organizations/jenkins/UCC%2Fucc/detail/ucc/${{run.number}}/pipeline"
+                if (run.getResult() != 'SUCCESS') {{
+                    error("Job ucc failed")
+                }}
+            }}, 'ucc-build-hpcsdk': {{
+                def run = build job: 'ucc-build-hpcsdk', parameters: [
                     string(name: 'sha1', value: githubHelper.getMergedSHA()),
                     string(name: 'githubData', value: VARIABLE_FROM_POST)
-                ], wait: true
+                ], wait: true, propagate: false
+                echo "See HPC-SDK Job status: ${{JENKINS_URL}}blue/organizations/jenkins/UCC%2Fucc-build-hpcsdk/detail/ucc-build-hpcsdk/${{run.number}}/pipeline"
+                if (run.getResult() != 'SUCCESS') {{
+                    error("Job ucc-build-hpcsdk failed")
+                }}
             }}
 
             githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI succeeded", GitHubCommitState.SUCCESS)
