--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -39,29 +39,10 @@
           name: "UCC_VERSION"
           default: "1.0.0"
           description: "UCC version"
-    triggers:
-#      - github-pull-request:
-#          cron: 'H/5 * * * *'
-#          trigger-phrase: '.*\bbot:retest\b.*'
-#          status-add-test-results: true
-#          auth-id: '549927eb-7f38-4a8f-997a-81dd63605782'
-#          org-list: ["Mellanox","openucx"]
-#          white-list: ["swx-jenkins","swx-jenkins2","swx-jenkins3","mellanox-github"]
-#          allow-whitelist-orgs-as-admins: true
-      - github-pull-request:
-          cron: 'H/5 * * * *'
-          trigger-phrase: '.*\bbot:(?:ucc:)?retest\b.*'
-          status-context: "ucc"
-          success-status: "Test PASSed."
-          failure-status: "Test FAILed."
-          error-status:   "Test FAILed."
-          status-add-test-results: true
-          cancel-builds-on-update: true
-          # swx-jenkins2 from GitHub Pull Request Builder
-          auth-id: "{jjb_ghprb_auth_id}"
-          org-list: ["Mellanox","openucx"]
-          white-list: ["svcnbu-swx-hpcx", "swx-jenkins","swx-jenkins2","swx-jenkins3","mellanox-github"]
-          allow-whitelist-orgs-as-admins: true
+      - string:
+          name: "githubData"
+          default: ""
+          description: "Variables from post"
     pipeline-scm:
       scm:
         - git:
@@ -109,22 +90,10 @@
           name: "CONF_FILE"
           default: ".ci/pipeline/build_hpcsdk_matrix.yaml"
           description: "Regex to select job config file"
-    triggers:
-      - github-pull-request:
-          cron: 'H/5 * * * *'
-          trigger-phrase: '.*\bbot:(?:hpcsdk:)?retest\b.*'
-          status-context: "ucc-hpcsdk"
-          success-status: "Build PASSed."
-          failure-status: "Build FAILed."
-          error-status:   "Build FAILed."
-          status-url: "${{JENKINS_URL}}blue/organizations/jenkins/UCC%2Fucc-build-hpcsdk/detail/ucc-build-hpcsdk/${{BUILD_NUMBER}}/pipeline"
-          status-add-test-results: true
-          cancel-builds-on-update: true
-          # swx-jenkins2 from GitHub Pull Request Builder
-          auth-id: "{jjb_ghprb_auth_id}"
-          org-list: ["Mellanox","openucx"]
-          white-list: ["svcnbu-swx-hpcx"]
-          allow-whitelist-orgs-as-admins: true
+      - string:
+          name: "githubData"
+          default: ""
+          description: "Variables from post"
     pipeline-scm:
       scm:
         - git:
@@ -138,6 +107,88 @@
             browser-url: "{jjb_git}"
       script-path: "{jjb_jenkinsfile}"
 
+- job-template:
+    name: "{jjb_proj}-ci-dispatcher"
+    project-type: pipeline
+    folder: "{jjb_folder}"
+    properties:
+      - github:
+          url: "{jjb_git_web}"
+      - build-discarder:
+          days-to-keep: 14
+          num-to-keep: 1000
+      - inject:
+          keep-system-variables: true
+          properties-content: |
+            jjb_proj={jjb_proj}-ci-dispatcher
+    triggers:
+      - generic-webhook-trigger:
+          token: "{jjb_proj}-ci-dispatcher"
+          print-contributors: true
+          print-posted-content: true
+          silent-response: false
+          cause: "Generic Cause"
+          post-content-params:
+            - type: JSONPath
+              key: githubData
+              value: $
+            - type: JSONPath
+              key: VARIABLE_FROM_POST
+              value: $
+    description: Do NOT edit this job through the Web GUI !
+    concurrent: true
+    sandbox: true
+    parameters:
+      - string:
+          name: "VARIABLE_FROM_POST"
+          default: ""
+          description: ""
+    dsl: |
+        @Library('blossom-github-lib@master')
+        import ipp.blossom.*
+
+        withCredentials([usernamePassword(credentialsId: 'svcnbu-swx-hpcx-github-token', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {{
+          githubHelper = GithubHelper.getInstance("${{GIT_PASSWORD}}", VARIABLE_FROM_POST)
+        }}
+
+        def blueOceanUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F{jjb_proj}-ci-dispatcher/detail/{jjb_proj}-ci-dispatcher/${{BUILD_NUMBER}}/pipeline/"
+        githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING)
+        currentBuild.description = githubHelper.getBuildDescription()
+
+        try {{
+            parallel UCC: {{
+                def jobName = 'ucc'
+                def run = build job: jobName, parameters: [
+                    string(name: 'sha1', value: githubHelper.getMergedSHA()),
+                    string(name: 'githubData', value: VARIABLE_FROM_POST)
+                ], propagate: false
+                def jobUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F${{jobName}}/detail/${{jobName}}/${{run.number}}/pipeline"
+                if (run.resultIsBetterOrEqualTo('SUCCESS')) {{
+                    echo "${{jobName}} SUCCESS: ${{jobUrl}}"
+                }} else {{
+                    error("${{jobName}} FAILED: ${{jobUrl}}")
+                }}
+            }}, 'ucc-build-hpcsdk': {{
+                def jobName = 'ucc-build-hpcsdk'
+                def run = build job: jobName, parameters: [
+                    string(name: 'sha1', value: githubHelper.getMergedSHA()),
+                    string(name: 'githubData', value: VARIABLE_FROM_POST)
+                ], propagate: false
+                def jobUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F${{jobName}}/detail/${{jobName}}/${{run.number}}/pipeline"
+                if (run.resultIsBetterOrEqualTo('SUCCESS')) {{
+                    echo "${{jobName}} SUCCESS: ${{jobUrl}}"
+                }} else {{
+                    error("${{jobName}} FAILED: ${{jobUrl}}")
+                }}
+            }}
+
+            githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI succeeded", GitHubCommitState.SUCCESS)
+        }} catch(Exception ex) {{
+            println ex
+            githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI failed", GitHubCommitState.FAILURE)
+            error("failed")
+        }}
+
 - project:
     name: ucc-build
     jjb_proj: 'ucc'
@@ -148,7 +199,7 @@
     jjb_owner: 'artemry'
     jjb_jenkinsfile: '.ci/Jenkinsfile.shlib'
     jjb_gh_auth_id: 'svcnbu-swx-hpcx_ssh_with_key'
-    jjb_ghprb_auth_id: 'ghprb-auth-svcnbu-swx-hpcx'
     jobs:
       - "{jjb_proj}"
       - "{jjb_proj}-build-hpcsdk"
+      - "{jjb_proj}-ci-dispatcher"
