--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -2,6 +2,7 @@
     name: "{jjb_proj}"
     folder: "{jjb_folder}"
     project-type: pipeline
+    folder: "{jjb_folder}"
     properties:
       - github:
           url: "{jjb_git_web}"
@@ -56,6 +57,61 @@
             browser: githubweb
             browser-url: "{jjb_git}"
       script-path: "$script"
+
+- job-template:
+    name: "{jjb_proj}-test-nvls"
+    project-type: pipeline
+    folder: "{jjb_folder}"
+    properties:
+      - github:
+          url: "{jjb_git_web}"
+      - build-discarder:
+          days-to-keep: 30
+          num-to-keep: 20
+      - inject:
+          keep-system-variables: true
+          properties-content: |
+            jjb_proj="{jjb_proj}-test-nvls"
+    description: Do NOT edit this job through the Web GUI !
+    concurrent: true
+    sandbox: true
+    parameters:
+      - string:
+          name: "sha1"
+          default: "master"
+          description: "Commit to be checked, set by PR"
+      - string:
+          name: "UCC_VERSION"
+          default: "1.0.0"
+          description: "UCC version"
+      - string:
+          name: "githubData"
+          default: ""
+          description: "Blossom CI Variables from post"
+      - bool:
+          name: "BUILD_DOCKERS"
+          default: true
+          description: "Rebuild docker containers"
+      - string:
+          name: "CONF_FILE"
+          default: ".ci/pipeline/test_nvls_matrix.yaml"
+          description: "Regex to select job config file"
+      - string:
+          name: "DEBUG"
+          default: 0
+          description: "Enable debug prints and traces, valid values are 0-9"
+    pipeline-scm:
+      scm:
+        - git:
+            url: "{jjb_git}"
+            credentials-id: "{jjb_gh_auth_id}"
+            branches: [ '$sha1' ]
+            shallow-clone: true
+            depth: 10
+            refspec: "+refs/heads/*:refs/remotes/origin/* +refs/pull/*:refs/remotes/origin/pr/*"
+            browser: githubweb
+            browser-url: "{jjb_git}"
+      script-path: "{jjb_jenkinsfile}"
 
 - job-template:
     name: "{jjb_proj}-build-hpcsdk"
@@ -182,10 +238,11 @@
     jjb_git_web: 'https://github.com/openucx/ucc'
     jjb_branch: 'master'
     jjb_folder: "UCC"
-    jjb_owner: 'artemry'
+    jjb_owner: 'ucc-devops'
     jjb_jenkinsfile: '.ci/Jenkinsfile.shlib'
     jjb_gh_auth_id: 'svcnbu-swx-hpcx_ssh_with_key'
     jobs:
       - "{jjb_proj}"
       - "{jjb_proj}-build-hpcsdk"
       - "{jjb_proj}-ci-dispatcher"
+      - "{jjb_proj}-test-nvls"
